searx/searx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: searx
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: searx.pauljennings.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: searx-svc
          servicePort: 8181
